<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="@dimen/app_padding_top"
    android:paddingEnd="@dimen/app_padding_top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:text="@string/emp_id"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/emp_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:text="@string/emp_fname"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/emp_fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:text="@string/emp_lname"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/emp_lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:text="@string/emp_position"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/emp_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:text="@string/emp_email"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/emp_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:text="@string/emp_age"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/emp_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <View
            style="@style/DividerH"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12.5dp"
            android:layout_marginRight="12.5dp"
            android:layout_marginTop="6dp" />


    </LinearLayout>


</LinearLayout>