<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:paddingBottom="@dimen/app_padding_bottom"
        android:paddingTop="@dimen/app_padding_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:text="@string/employee_id"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/emp_r_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:paddingBottom="@dimen/app_padding_bottom"
        android:paddingTop="@dimen/app_padding_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:text="@string/employee_date"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/emp_r_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:paddingBottom="@dimen/app_padding_bottom"
        android:paddingTop="@dimen/app_padding_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:text="@string/employee_salary"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/emp_r_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:paddingBottom="@dimen/app_padding_bottom"
        android:paddingTop="@dimen/app_padding_top">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="ltr"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:text="@string/employee_type"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/emp_r_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/transparent"
                android:paddingStart="5dp"
                android:textColor="#232424"
                android:textColorHint="#858585"
                android:textSize="15sp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <View
            style="@style/DividerH"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="12.5dp"
            android:layout_marginRight="12.5dp"
            android:layout_marginTop="6dp" />


    </LinearLayout>

</LinearLayout>